[B]Version 1.1.113[/B]
- speedporn - fix categories
- familypornhd - fix playback
- rule34video - fix tags
- hentaistream - fix listing, playback
- pornhoarder - fix search/categories
