@@ -4,4 +4,6 @@
 - rule34video - fix tags
 - hentaistream - fix listing, playback
 - pornhoarder - fix search/categories
-
+- spankbang - fix missing item titles
+- sextb - fix missing thumbs
+- camsoda - add categories
